# dynamic_chunks

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: release.yaml  test.yaml
dynamic_chunks/: __init__.py  algorithms.py  dynamic_target_chunks.py
dynamic_chunks/tests/: test_algorithms.py  test_dynamic_target_chunks.py
