
#
[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

#
[project]
name = "dynamic_chunks"
requires-python = ">=3.8"
description = "Determine appropriate chunk sizes for a given xarray dataset based on target chunk size and chunk aspect ratio"
# readme = "README.md"
authors = [
  { name = "Julius Busecke", email = "julius@ldeo.columbia.edu" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
license = { text = "Apache-2.0" }
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[tool.setuptools_scm]
version_file = "dynamic_chunks/_version.py"
write_to_template = "__version__ = '{version}'"

## dynamic parsing is not working for some reason....d

#
[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

# from https://stackoverflow.com/a/76771725
optional-dependencies.test = { file = ["test-requirements.txt"] }

#
[project.urls]
Homepage = "https://github.com/jbusecke/dynamic_chunks"
Tracker = "https://github.com/jbusecke/dynamic_chunks/issues"
#Documentation = "https://pangeo-forge.readthedocs.io/en/latest/"